--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "react-select": "^5.10.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
